completely changed the machine learning alg